--- a/tools/qcsbench/iometer/README
+++ b/tools/qcsbench/iometer/README
@@ -7,11 +7,11 @@ Requrements:
 
 Configuration:
 - create windows vm with user administrator and password master@123
-- Install IOmeter and dynamo in Desktop directory
+- Install IOmeter and dynamo in C:\Users\Administrator\Desktop\iometer_sdk directory
+- Instal pscp.exe in Desktip directory
 - Disable the firewall
 - install freesshd and start the service on port 22 create user administrator 
   and password master@123 for freesshd server
  
 ========================================================================================== 
-
 
