Updated README files as per current qcsbench requirements
Signed-off-by: Sandeep.Prajapati <sandeep.prajapati@msystechnologies.com>

--- a/tools/qcsbench/fio/README
+++ b/tools/qcsbench/fio/README
@@ -17,5 +17,4 @@ Usage:
    will find below files under 'output' created
     fio_stdout.log result.txt
    fio_stdout.log - log displayed on screen
-  
-  
+   result.txt - fio result statistics
