--- a/tools/qcsbench/iometer/README
+++ b/tools/qcsbench/iometer/README
@@ -4,10 +4,10 @@ Prerequisite:
    1. Requrement:
       - Windows 8 and above
    2. Configuration:
-      - create windows vm with user administrator and password master@123
+      - create windows server with user administrator and password master@123
       - Install IOmeter and dynamo in
         C:\Users\Administrator\Desktop\iometer_sdk directory
-      - Instal pscp.exe in Desktip directory
+      - Instal pscp.exe in Desktop directory
       - Disable the firewall
       - install freesshd and start the service on port 22 create user
         administrator and password master@123 for freesshd server
